--- a/src/editor.scss
+++ b/src/editor.scss
@@ -4,9 +4,34 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-beforeafterimagesi input[type="text"] {
-	font-size: 1em;
-	color: inherit;
-	background: inherit;
-	border: 0;
+ .wp-block-create-block-beforeafterimagesi {
+	display: block;
+	min-height: auto;
+	.container {
+		display: block;
+		position: static;
+		overflow: hidden;
+		border-radius: 0;
+		--position: 0;
+		width: 100%;
+		.image-container {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+		    max-width: 100%;
+			max-height: 100%;
+			aspect-ratio: auto;
+			figure {
+				display:block;
+				&:first-child {
+					position: relative;
+					inset: 0;
+					width:100%;
+				}
+			}
+		}
+	}
+	.slider-button,
+	.slider-line {
+		left:50%;
+	}
 }
