--- a/src/style.scss
+++ b/src/style.scss
@@ -5,23 +5,103 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-beforeafterimagesi {
-	font-size: 1em;
-	background: #ffff001a;
-	padding: 1em;
+ .wp-block-create-block-beforeafterimagesi {
+	display: grid;
+	place-items: center;
 
-	&.dark-theme {
-		background: #333;
-		color: #fff;
+	*,
+	*::after,
+	*::before {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
 
-		button {
-			background: #555;
-			color: #fff;
-			border: 1px solid #777;
+	.container {
+		display: grid;
+		place-content: center;
+		position: relative;
+		overflow: hidden;
+		border-radius: 1rem;
+		--position: 50%;
+	}
+
+	.image-container {
+		max-width: 800px;
+		max-height: 90vh;
+		aspect-ratio: 1/1;
+
+		figure {
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+			display: flex;
+			img{
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: left;
+			}
+			figcaption{
+				position: absolute;
+				bottom: 0;
+				background-color: rgb(210, 210, 210);
+				width: 100%;
+				display: block;
+				overflow: hidden;
+				text-align: left;
+				text-indent: 10px;
+			}
+
+			&:first-child {
+				position: absolute;
+				inset: 0;
+				width: var(--position);
+				figcaption{
+					z-index: 10;
+				}
+			}
 		}
+	}
+	.slider {
+		position: absolute;
+		inset: 0;
+		cursor: pointer;
+		opacity: 0;
+		/* for Firefox */
+		width: 100%;
+		height: 100%;
+	}
 
-		p {
-			color: #ddd;
-		}
+	.slider:focus-visible ~ .slider-button {
+		outline: 5px solid black;
+		outline-offset: 3px;
+	}
+
+	.slider-line {
+		position: absolute;
+		inset: 0;
+		width: .2rem;
+		height: 100%;
+		background-color: #fff;
+		left: var(--position);
+		transform: translateX(-50%);
+		pointer-events: none;
+	}
+
+	.slider-button {
+		position: absolute;
+		background-color: #fff;
+		color: black;
+		padding: .5rem;
+		border-radius: 100vw;
+		display: grid;
+		place-items: center;
+		top: 50%;
+		left: var(--position);
+		transform: translate(-50%, -50%);
+		pointer-events: none;
+		box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
 	}
 }
